- added scripts check_gams.sh, evalcheck_gams.sh and check_gams.awk and target "testgams" in Makefile
- can now compute the relative interior point of the current LP
- interval arithmetics for power, log, and exp should be rounding safe now


SCIP version 2.0.2
==================

fixed bugs:
- fixed bug in heur_subnlp.c where constraints forbidding variable fixations where added if a cutoff was used in the subproblem
- fixed wrong assert in plugins that use SCIPcopy()
- fixed wrong (neg)cliquepartition check in cons_knapsack.c when deleting a coefficient
- fixed memory leak in SoPlex LP interface when requesting an unbounded solution
- fixed memory leak in SoPlex LP interface when solving with LP scaling
- fixed memory leaks in reader of TSP example 
- fixed bug while after restarting possible the aggregted variables were not removed in setppc constraints
- fixed various small bugs in nonlinear expressions code

performance improvements:
- fasten propagation in cons_knapsack.c due to negated clique partitions
- recalculating only needed partitions in cons_knapsack.c, not always both
- calculation of node priority now also works when variable's relaxation value is equal to a bound
- fasten knapsack separation by replacing SCIPallocBufer(Array) through SCIPallocBlockMemory(Array)

SCIP version 2.0.1
==================

interface:
- allow access of transformed constraints in SCIP_STAGE_TRANSFORMED

performance improvements:
- SCIP with SoPlex as LP solver now uses auto pricing by default (start with devex, switch to steepest edge after some iterations);
  this fixes timeouts on instances where devex converges very slowly
- fixing lifting of new knapsack items which are negated items of already included items, this could lead to very long presolving
- fixed performance issue in presolving w.r.t. to computing the number of new fixings, aggregated, and so on before a 
  constraint handler presolver is called